# BSc-Thesis-Project

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  cpp_multiple_masks_signal.py  min_filter_1d copy.py  min_filter_1d.py  np  random  run_cpp_images.py  sys  time
data/: config.json  signal.txt
output/: NaiveMaxMulti.txt  NaiveMaxSingle.txt  NaiveMinMulti.txt  NaiveMinSingle.txt  SignalNaiveMaxSingle.txt  SignalNaiveMinMulti.txt  SignalNaiveMinSingle.txt  SignalSmartMaxSingle.txt  SignalSmartMinSingle.txt  SmartMaxMulti.txt  SmartMaxSingle.txt  SmartMinMulti.txt  SmartMinSingle.txt  Statistics.txt  signalResult.txt
scripts/: build.ps1  build.sh  buildDebug.ps1  calcStatistics.ps1  calcStatistics.sh  calcStatisticsSignal.ps1  calcStatisticsSignal.sh  clean.sh  install.ps1  install.sh  run.ps1  run.sh  runTests.ps1  runTests.sh
source/: CMakeLists.txt  NumCPPSignal.cpp  imageTests.cpp  images.cpp  main.cpp  numcpp.cpp  signalTests.cpp  signals.cpp
source/Config/: CMakeLists.txt  Config.cpp  Config.h  FilterInfo.h
source/FileManager/: CMakeLists.txt  FileManager.cpp  FileManager.h
source/Filter/: CMakeLists.txt  Filter.cpp  Filter.h
source/ImageFilter/: CMakeLists.txt  ImageFilter.cpp  ImageFilter.h
source/NaiveImageFilter/: CMakeLists.txt  NaiveImageFilter.cpp  NaiveImageFilter.h
source/NaiveSignalFilter/: CMakeLists.txt  NaiveSignalFilter.cpp  NaiveSignalFilter.h
source/Signal/: CMakeLists.txt  Signal.cpp  Signal.h
source/SignalFilter/: CMakeLists.txt  SignalFilter.cpp  SignalFilter.h
source/SmartImageFilter/: CMakeLists.txt  SmartImageFilter.cpp  SmartImageFilter.h
source/SmartSignalFilter/: CMakeLists.txt  SmartSignalFilter.cpp  SmartSignalFilter.h
source/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
tools/: CMakeLists.txt  statistics.cpp  statisticsSignal.cpp
