find_package(nlohmann_json REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Catch2 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

include(source/Config/CMakeLists.txt)
include(source/FileManager/CMakeLists.txt)
include(source/Filter/CMakeLists.txt)
include(source/ImageFilter/CMakeLists.txt)
include(source/NaiveImageFilter/CMakeLists.txt)
include(source/SmartImageFilter/CMakeLists.txt)
include(source/NaiveSignalFilter/CMakeLists.txt)
include(source/SmartSignalFilter/CMakeLists.txt)
include(source/Signal/CMakeLists.txt)
include(source/SignalFilter/CMakeLists.txt)

add_executable(Signal source/signals.cpp ${file_manager_src} ${config_src} ${filter_src} ${signal_src} ${signal_filter_src} ${naive_signal_filter_src} ${smart_signal_filter_src})
add_executable(Image source/images.cpp ${file_manager_src} ${config_src} ${filter_src} ${signal_src} ${image_filter_src} ${naive_image_filter_src} ${smart_image_filter_src})
add_executable(ImageTests source/imageTests.cpp ${file_manager_src} ${config_src} ${filter_src} ${signal_src} ${image_filter_src} ${naive_image_filter_src} ${smart_image_filter_src})
add_executable(SignalTests source/signalTests.cpp ${file_manager_src} ${config_src} ${filter_src} ${signal_src} ${signal_filter_src} ${naive_signal_filter_src} ${smart_signal_filter_src})

target_compile_features(Signal PRIVATE cxx_std_17)
target_compile_features(Image PRIVATE cxx_std_17)
target_compile_features(ImageTests PRIVATE cxx_std_17)
target_compile_features(SignalTests PRIVATE cxx_std_17)

target_link_libraries(Signal PRIVATE nlohmann_json::nlohmann_json ${OpenCV_LIBS})
target_link_libraries(Image PRIVATE nlohmann_json::nlohmann_json ${OpenCV_LIBS})
target_link_libraries(ImageTests PRIVATE nlohmann_json::nlohmann_json ${OpenCV_LIBS} Catch2::Catch2WithMain)
target_link_libraries(SignalTests PRIVATE nlohmann_json::nlohmann_json ${OpenCV_LIBS} Catch2::Catch2WithMain)